feat: implement required endpoints
